CSS chnages to fix spacing issues

--- a/ui.frontend/src/main/webpack/global/styles/components/footer/footer.scss
+++ b/ui.frontend/src/main/webpack/global/styles/components/footer/footer.scss
@@ -1716,7 +1716,7 @@
   padding: 3.5rem 0 3rem;
   margin-bottom: toRem(24);
 
-  & .container {
-    padding: 0 !important;
-  }
+  // & .container {
+  //   padding: 0 !important;
+  // }
 }
